--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,6 +39,7 @@ const today = new Date();
   .copyright-tag {
     color: #ede1d1;
     font-size: 1p6px;
+    text-align: center;
 
     /* color: rgb(255, 251, 0); */
   }
