--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -2,201 +2,252 @@
 import astroLogo from "../assets/astro.svg";
 import background from "../assets/background.svg";
 import banneIMG from "../assets/bg-nak.jpg";
+
+const resturantName = "Tortas Ahogadas Mi Barrio";
+const subName = "Estilo Jalisco";
 ---
 
 <section>
   <div class="banner-image">
-    <img src="bgimg.jpeg" alt="Background Image" />
+    <img src={banneIMG.src} alt="Background Image" />
+    <div class="banner-text">
+      <h1>{resturantName}</h1>
+      <p>
+        {subName}
+      </p>
+    </div>
   </div>
-  <h1>Tortas Ahogadas Mi Barrio</h1>
-  <p>Estilo Guadljara</p>
-</section>
 
-<div id="container">
-  <!-- <img id="background" src={banneIMG.src} alt="" fetchpriority="high" />
+  <div id="container">
+    <!-- <img id="background" src={banneIMG.src} alt="" fetchpriority="high" />
 	 
 	<a href="https://astro.build"
 				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
 			>
 	
 	-->
-  <main>
-    <section id="hero">
-      <!-- 			
+    <main>
+      <section id="hero">
+        <!-- 			
 			<h1>
 				<code><pre>Tortas Ahogas </pre></code>
 			</h1> -->
-      <section id="links">
-		
-	  </section>
-    </section>
-  </main>
-</div>
+        <section id="links"></section>
+      </section>
+    </main>
+  </div>
 
-<style>
-  #background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    filter: blur(100px);
-  }
-
-  #container {
-    font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans",
-      Arial, sans-serif;
-    height: 100%;
-  }
-
-  main {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-  }
-
-  #hero {
-    display: flex;
-    align-items: start;
-    flex-direction: column;
-    justify-content: center;
-    padding: 16px;
-  }
-
-  h1 {
-    font-size: 22px;
-    margin-top: 0.25em;
-  }
-
-  #links {
-    display: flex;
-    gap: 16px;
-  }
-
-  #links a {
-    display: flex;
-    align-items: center;
-    padding: 10px 12px;
-    color: #111827;
-    text-decoration: none;
-    transition: color 0.2s;
-  }
-
-  #links a:hover {
-    color: rgb(78, 80, 86);
-  }
-
-  #links a svg {
-    height: 1em;
-    margin-left: 8px;
-  }
-
-  #links a.button {
-    color: white;
-    background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
-    box-shadow:
-      inset 0 0 0 1px rgba(255, 255, 255, 0.12),
-      inset 0 -2px 0 rgba(0, 0, 0, 0.24);
-    border-radius: 10px;
-  }
-
-  #links a.button:hover {
-    color: rgb(230, 230, 230);
-    box-shadow: none;
-  }
-
-  pre {
-    font-family: ui-monospace, "Cascadia Code", "Source Code Pro", Menlo,
-      Consolas, "DejaVu Sans Mono", monospace;
-    font-weight: normal;
-    background: linear-gradient(14deg, #d83333 0%, #f041ff 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    margin: 0;
-  }
-
-  h2 {
-    margin: 0 0 1em;
-    font-weight: normal;
-    color: #111827;
-    font-size: 20px;
-  }
-
-  p {
-    color: #4b5563;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.006em;
-    margin: 0;
-  }
-
-  code {
-    display: inline-block;
-    background:
-      linear-gradient(66.77deg, #f3cddd 0%, #f5cee7 100%) padding-box,
-      linear-gradient(155deg, #d83333 0%, #f041ff 18%, #f5cee7 45%) border-box;
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 6px 8px;
-  }
-
-  .box {
-    padding: 16px;
-    background: rgba(255, 255, 255, 1);
-    border-radius: 16px;
-    border: 1px solid white;
-  }
-
-  #news {
-    position: absolute;
-    bottom: 16px;
-    right: 16px;
-    max-width: 300px;
-    text-decoration: none;
-    transition: background 0.2s;
-    backdrop-filter: blur(50px);
-  }
-
-  #news:hover {
-    background: rgba(255, 255, 255, 0.55);
-  }
-
-  @media screen and (max-height: 368px) {
-    #news {
-      display: none;
+  <style>
+    #background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      filter: blur(100px);
     }
-  }
 
-  @media screen and (max-width: 768px) {
     #container {
+      font-family: Inter, Roboto, "Helvetica Neue", "Arial Nova", "Nimbus Sans",
+        Arial, sans-serif;
+      height: 100%;
+    }
+
+    .banner-image {
+      position: relative;
+    }
+
+    .banner-image img {
+      vertical-align: middle;
+      width: 100%;
+      height: 100;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      background-repeat: no-repeat;
+      object-fit: cover;
+    }
+
+    .banner-image::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+    .banner-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      z-index: 2;
+      text-shadow: 2px 2px 12px rgba(0, 0, 0, 0.75);
+     
+    }
+
+    .banner-text h1 {
+      font-size: 2.5rem;
+      color: #fff;
+      margin: 0;
+    }
+
+    .banner-text p {
+      font-size: 1.2rem;
+      color: #559507;
+      margin-top: 0.5rem;
+    }
+    main {
+      height: 100%;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
     }
 
     #hero {
-      display: block;
-      padding-top: 10%;
-    }
-
-    #links {
-      flex-wrap: wrap;
-    }
-
-    #links a.button {
-      padding: 14px 18px;
-    }
-
-    #news {
-      right: 16px;
-      left: 16px;
-      bottom: 2.5rem;
-      max-width: 100%;
+      display: flex;
+      align-items: start;
+      flex-direction: column;
+      justify-content: center;
+      padding: 16px;
     }
 
     h1 {
-      line-height: 1.5;
+      font-size: 22px;
+      margin-top: 0.25em;
     }
-  }
-</style>
+
+    #links {
+      display: flex;
+      gap: 16px;
+    }
+
+    #links a {
+      display: flex;
+      align-items: center;
+      padding: 10px 12px;
+      color: #111827;
+      text-decoration: none;
+      transition: color 0.2s;
+    }
+
+    #links a:hover {
+      color: rgb(78, 80, 86);
+    }
+
+    #links a svg {
+      height: 1em;
+      margin-left: 8px;
+    }
+
+    #links a.button {
+      color: white;
+      background: linear-gradient(83.21deg, #3245ff 0%, #bc52ee 100%);
+      box-shadow:
+        inset 0 0 0 1px rgba(255, 255, 255, 0.12),
+        inset 0 -2px 0 rgba(0, 0, 0, 0.24);
+      border-radius: 10px;
+    }
+
+    #links a.button:hover {
+      color: rgb(230, 230, 230);
+      box-shadow: none;
+    }
+
+    pre {
+      font-family: ui-monospace, "Cascadia Code", "Source Code Pro", Menlo,
+        Consolas, "DejaVu Sans Mono", monospace;
+      font-weight: normal;
+      background: linear-gradient(14deg, #d83333 0%, #f041ff 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      margin: 0;
+    }
+
+    h2 {
+      margin: 0 0 1em;
+      font-weight: normal;
+      color: #111827;
+      font-size: 20px;
+    }
+
+    p {
+      color: #4b5563;
+      font-size: 16px;
+      line-height: 24px;
+      letter-spacing: -0.006em;
+      margin: 0;
+    }
+
+    code {
+      display: inline-block;
+      background:
+        linear-gradient(66.77deg, #f3cddd 0%, #f5cee7 100%) padding-box,
+        linear-gradient(155deg, #d83333 0%, #f041ff 18%, #f5cee7 45%) border-box;
+      border-radius: 8px;
+      border: 1px solid transparent;
+      padding: 6px 8px;
+    }
+
+    .box {
+      padding: 16px;
+      background: rgba(255, 255, 255, 1);
+      border-radius: 16px;
+      border: 1px solid white;
+    }
+
+    #news {
+      position: absolute;
+      bottom: 16px;
+      right: 16px;
+      max-width: 300px;
+      text-decoration: none;
+      transition: background 0.2s;
+      backdrop-filter: blur(50px);
+    }
+
+    #news:hover {
+      background: rgba(255, 255, 255, 0.55);
+    }
+
+    @media screen and (max-height: 368px) {
+      #news {
+        display: none;
+      }
+    }
+
+    @media screen and (max-width: 768px) {
+      #container {
+        display: flex;
+        flex-direction: column;
+      }
+
+      #hero {
+        display: block;
+        padding-top: 10%;
+      }
+
+      #links {
+        flex-wrap: wrap;
+      }
+
+      #links a.button {
+        padding: 14px 18px;
+      }
+
+      #news {
+        right: 16px;
+        left: 16px;
+        bottom: 2.5rem;
+        max-width: 100%;
+      }
+
+      h1 {
+        line-height: 1.5;
+      }
+    }
+  </style>
+</section>
