--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,11 +1,17 @@
 ---
 import astroLogo from "../assets/logoicon.jpg";
+import Social from "./Social.astro";
 ---
 
 <div class="nav-container">
-  <div class="logo">
+  <div class="nav-logo">
     <a href="https://astro.build"
-      ><img src={astroLogo.src} width="115" height="48" alt="GCAA Homepage" /></a
+      ><img
+        src={astroLogo.src}
+        width="115"
+        height="48"
+        alt="GCAA Homepage"
+      /></a
     >
   </div>
 
