--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -44,17 +44,17 @@ const { platform, username } = Astro.props;
     align-items: center;
     justify-content: center;
     padding: 0.5rem;
-    background-color: #a30505;
+    background-color: #19528E;
     border-radius: 4px;
     text-decoration: none;
-    width: 32px;
-    height: 32px;
+    width: 16px;
+    height: 16px;
   }
   a:hover {
-    background-color: #000000;
+    background-color: #7b0707;
   }
   svg {
-    fill: rgb(0, 179, 45);
+    fill: rgb(255, 255, 255);
     width: 24px;
     height: 24px;
   }
