--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -55,6 +55,8 @@ const subName = "Estilo Jalisco";
 
     .banner-image {
       position: relative;
+          border-top: #002879 5px solid;
+
     }
 
     .banner-image img {
