--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,8 @@
 ---
 import astroLogo from "../assets/logoicon.jpg";
 import Social from "./Social.astro";
+import { dashLink, SC_FB_TAG, SC_IG_TAG, SC_TK_TAG } from "../consts";
+
 ---
 
 <div class="nav-container">
@@ -18,6 +20,6 @@ import Social from "./Social.astro";
   <div class="nav-links">
     <a href="/">Home</a>
     <a href="/about/">About</a>
-    <a href="/join/">Join</a>
+    <a href={dashLink}>Order</a>
   </div>
 </div>
