--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -1,28 +1,27 @@
 ---
 import type { CollectionEntry } from "astro:content";
-import BaseHead from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
+import "../styles/global.css";
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
 <html lang="en">
   <head>
-    <BaseHead title={title} description={description} />
     <style>
       main {
-        width: calc(100% - 2em);
         max-width: 100%;
         margin: 0;
-        background-color: #000000;
+        background-color: #080803;
       }
-      .hero-image {
-        width: 100%;
-      }
+     
       .hero-image img {
         display: block;
         margin: 0 auto;
-        border-radius: 12px;
+       max-width: 100%; /* max-width change image size */
+  height: auto;
+        border-radius: 4px;
         box-shadow: #cd1732 0px 5px 15px;
       }
       .prose {
@@ -50,21 +49,17 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       }
       .last-updated-on {
         font-style: italic;
-        ;
       }
     </style>
   </head>
 
   <body>
+    <Header />
 
     <main>
       <article>
         <div class="hero-image">
-          {
-            heroImage && (
-              <img width={1020} height={510} src={heroImage} alt="" />
-            )
-          }
+          {heroImage && <img src={heroImage.src} alt="" />}
         </div>
         <div class="prose">
           <div class="title">
