--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -55,8 +55,6 @@ const subName = "Estilo Jalisco";
 
     .banner-image {
       position: relative;
-          border-top: #002879 5px solid;
-
     }
 
     .banner-image img {
@@ -128,7 +126,10 @@ const subName = "Estilo Jalisco";
       padding: 16px;
     }
 
-    
+    h1 {
+      font-size: 22px;
+      margin-top: 0.25em;
+    }
 
     #links {
       display: flex;
