--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -13,7 +13,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
       main {
         max-width: 100%;
         margin: 0;
-        background-color: #080803;
+        background-color: #cfcfaa;
       }
 
       .hero-image img {
@@ -72,4 +72,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
     </main>
     <Footer />
   </body>
+  <script>
+    import "../scripts/menu.js";
+  </script>
 </html>
