--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,7 +24,6 @@ body {
 .nav-logo {
   display: flex;
   align-items: left;
-
 }
 
 .nav-logo img {
@@ -77,7 +76,6 @@ body {
   color: white;
   outline: none;
 }
-
 
 @media (max-width: 635px) {
   .hamburger {
@@ -135,4 +133,23 @@ body {
 
 .hamburger.active .line:nth-child(3) {
   transform: rotate(-45deg) translate(5px, -5px);
+}
+
+/* Caption text */
+.text {
+  color: yellow;
+  font-size: 25px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+  font-weight: 900;
+}
+
+.title-underline {
+  border-top: 8px solid #ffd700;
+  width: 50px;
+
+  margin: 20px auto;
 }
